changes of 19april

--- a/HelloDoc/Views/AdminDash/Access/_UserAccessPartial.cshtml
+++ b/HelloDoc/Views/AdminDash/Access/_UserAccessPartial.cshtml
@@ -20,7 +20,7 @@
                 <tbody class="text-center">
                     <tr>
                         <td>@item.AccountType</td>
-                        <td>@item.AccountType</td>
+                        <td>@item.AccountPOC</td>
                         @if (item.phonenum != null)
                         {
                             <td>@item.phonenum</td>
