--- a/HelloDoc/Views/AdminDash/CreateProviderAccount.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateProviderAccount.cshtml
@@ -114,6 +114,7 @@
                                        type="checkbox"
                                        id="region-@region.RegionId"
                                        name="regions"
+                                       required
                                        value="@region.RegionId" />
                                 <label class="form-check-label" for="region-@region.RegionId">@region.Name</label>
                             </div>
