--- a/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
+++ b/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
@@ -73,6 +73,7 @@
                   class="form-control border-0 no-border"
                   id="floatingInput"
                   placeholder="name@example.com"
+                  required
                 />
                 <img
                   src="../images/user_circle.svg"
@@ -80,6 +81,7 @@
                   class="pe-3 bg-white"
                 />
                 <label for="floatingInput">Email</label>
+                 <span asp-validation-for="Email"></span>
               </div>
             </div>
             <button class="btn btn-info text-white" type="submit">
